--- a/.github/workflows/QA.yml
+++ b/.github/workflows/QA.yml
@@ -17,7 +17,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  LBJobDockerCLI:
+  QA_CICD:
      runs-on: ubuntu-latest     
     # Steps represent a sequence of tasks that will be executed as part of the job
      steps:
