--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: MAIN_CICD_LIQUIBASE
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: [ "main", "DEV" ]
     paths:
     - 'PROPERTIES_BUSINESS/PROCESSED/**'
  #  pull_request:
