--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,10 @@ name: MAIN_CICD_LIQUIBASE
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main", "DEV" ]
+    branches:
+      - main
+      - Dev
+      
     paths:
     - 'PROPERTIES_BUSINESS/PROCESSED/**'
  #  pull_request:
