--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,9 @@ on:
       - main
       - Dev
       
-    paths:
+  workflow_dispatch:
+      
+  paths:
     - 'PROPERTIES_BUSINESS/PROCESSED/**'
  #  pull_request:
  #   branches: [ "main" ]
