--- a/.github/workflows/DEV.yml
+++ b/.github/workflows/DEV.yml
@@ -6,11 +6,12 @@ name: DEV_CICD_LIQUIBASE
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "Dev" ]
+    branches:
+      - Dev
     paths:
-    - 'PROPERTIES_BUSINESS/PROCESSED/**'
- #  pull_request:
- #   branches: [ "main" ]
+      - 'PROPERTIES_BUSINESS/PROCESSED/**'
+      
+  workflow_dispatch:
 
   # Allows you to run this workflow manually from the Actions tab
   # workflow_dispatch:
