--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,8 @@ name: MAIN_CICD_LIQUIBASE
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    # branches:
-    #   - main
+    branches:
+    - main
     #   - Dev
     paths:
       - 'PROPERTIES_BUSINESS/PROCESSED/**'
